# Brompton-coding-interview

./: CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.MD
include/: bits.hpp
src/: bits.cpp  main.cpp
test/: test_bits.cpp
